fixed: 事件单附件列表统计有问题 如附图所示，有两个附件，但是系统显示为"1"

--- a/app/views/icm/incident_requests/_sidebar_attachment_list.html.erb
+++ b/app/views/icm/incident_requests/_sidebar_attachment_list.html.erb
@@ -1,5 +1,5 @@
 <div class="sidebarModule">
-    <div class="sidebarModuleHeader"><h2><%= t :label_icm_incident_request_attachment_list %>(<%= @request_files.size%>)</h2></div>
+    <div class="sidebarModuleHeader"><h2><%= t :label_icm_incident_request_attachment_list %>(<%= @request_files.values.flatten.size%>)</h2></div>
     <div class="sidebarModuleBody">
     <table>
       <tbody id="watcher_list">
