fixed: 对“关闭时间”字段进行必输字段的提示.

--- a/app/views/csi/surveys/_new_form.html.erb
+++ b/app/views/csi/surveys/_new_form.html.erb
@@ -104,7 +104,7 @@
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_csi_survey_closed_datetime)%></label></td>
-              <td class="dataCol"><%= f.text_field :closed_datetime,:id=>"id_closed_datatime"%></td>
+              <td class="dataCol"><%= f.text_field :closed_datetime,:id=>"id_closed_datatime",:required => true%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
