--- a/app/views/irm/common/_address_bar_logo.html.erb
+++ b/app/views/irm/common/_address_bar_logo.html.erb
@@ -1,1 +1,2 @@
 <link rel="shortcut icon" href="<%= Irm::SystemParametersManager.address_bar_logo%>" type="image/x-icon"/>
+<link rel="Shortcut Icon" href="<%= Irm::SystemParametersManager.address_bar_logo%>">
