--- a/app/views/icm/urgence_codes/show.html.erb
+++ b/app/views/icm/urgence_codes/show.html.erb
@@ -44,7 +44,7 @@
             </tr>
             <tr>
               <td class="labelCol"><label ><%=(t :default_flag)%></label></td>
-              <td class="dataCol"><%= @urgence_code[:default_flag]%></td>
+              <td class="dataCol"><%= check_img(@urgence_code[:default_flag])%></td>
               <td class="labelCol"></td>
               <td class="dataCol"></td>
             </tr>
