--- a/app/views/icm/impact_ranges/show.html.erb
+++ b/app/views/icm/impact_ranges/show.html.erb
@@ -45,7 +45,7 @@
             </tr>
             <tr>
               <td class="labelCol"><label ><%=(t :default_flag)%></label></td>
-              <td class="dataCol"><%= @impact_range[:default_flag]%></td>
+              <td class="dataCol"><%= check_img(@impact_range[:default_flag])%></td>
               <td class="labelCol"></td>
               <td class="dataCol"></td>
             </tr>
