修正duel_select中的问题，用户提交form后，对data-remote类型的form不失效提交按钮

--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -430,6 +430,6 @@ GY.use('irm','node','substitute','yui2-editor', function(Y) {
 
 <% content_for :sidebar do%>
     <%= render :partial =>"/irm/watchers/sidebar_watcher_list",
-               :locals => {:watchable => @incident_request, :editable => @incident_request.close?} %>
+               :locals => {:watchable => @incident_request, :editable => !@incident_request.close?} %>
     <%= render :partial =>"/icm/incident_requests/sidebar_attachment_list"%>
 <% end %>
