--- a/app/views/icm/close_reasons/_edit_form.html.erb
+++ b/app/views/icm/close_reasons/_edit_form.html.erb
@@ -50,7 +50,7 @@
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :active)%></label></td>
-              <td class="dataCol"><%=f.select :status_code, available_active_status, {:include_blank => false}%></td>
+              <td class="dataCol"><%=f.select :status_code, available_active_status%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
