--- a/app/views/csi/surveys/show.html.erb
+++ b/app/views/csi/surveys/show.html.erb
@@ -81,13 +81,16 @@
               <%= t(:delete) %>
             <% end %>
           </div>
+          <div id="required_flag" style="display:none">
+              <%= check_img("{required_flag}") %>
+          </div>
     </div>
         <%= datatable("survey_subject",url_for(:controller=>"csi/survey_subjects",:action=>"get_data",:id=>@survey.id,:survey_id=>@survey.id),
                   [{:key=>"id",:label=>t(:operation),:hidden=>!check_survey_result_exist?(@survey.id),:formatter=>"Y.irm.template",:width=>"80px"},
                    {:key=>"seq_num",:label=>t(:label_csi_survey_subject_seq_num),:width=>"70px"},
                    {:key=>"name",:label=>t(:label_csi_survey_subject_title)},
                    {:key=>"prompt",:label=>t(:label_csi_survey_subject_prompt)},
-                   {:key=>"required_flag",:label=>t(:required)}],
+                   {:key=>"required_flag",:label=>t(:required),:formatter=>"Y.irm.template"}],
                    {:row_perpage=>20})
         %>
     <div class="pbSubheader tertiaryPalette">&nbsp;
