fixed: 调查问卷中的“标题”应该是必输项， 但是系统却没有“必填信息”的提示

--- a/app/views/csi/survey_subjects/_subject_form.html.erb
+++ b/app/views/csi/survey_subjects/_subject_form.html.erb
@@ -11,7 +11,7 @@
             </tr>
             <tr>
               <td class="labelCol"><label><%=t(:label_csi_survey_subject_title)%></label></td>
-              <td class="dataCol"><%= form.text_field :name, :onfocus => "clear_initial(this);",
+              <td class="dataCol"><%= form.text_field :name, :required => true, :onfocus => "clear_initial(this);",
                                                       :onblur => "set_initial(this)" %></td>
             </tr>
             <tr>
