fixed: 现象： 同一个事故单可以重复生成知识项。
建议：
同一个事故单一旦生成知识项后，不允许运维人员对该事件单再次生成知识项。

--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -119,7 +119,9 @@
                 <% end %>
                 <div class="grayButton"><%= link_to t(:edit), {:controller=>"icm/incident_requests",:action => "edit", :id => @incident_request.id}%></div>
               <%end%>
-              <div class="grayButton"><%= link_to t(:label_icm_save_as_skm), {:controller=>"skm/entry_headers",:action => "new_from_icm_request", :request_id => @incident_request.id}%></div>
+              <% if @incident_request[:skm_flag]==0 %>
+                <div class="grayButton"><%= link_to t(:label_icm_save_as_skm), {:controller=>"skm/entry_headers",:action => "new_from_icm_request", :request_id => @incident_request.id}%></div>
+              <% end %>
           </td>
         </tr>
       </tbody>
