--- a/app/views/slm/service_catalogs/_edit_form.html.erb
+++ b/app/views/slm/service_catalogs/_edit_form.html.erb
@@ -25,56 +25,64 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
+             <tr>
+              <td class="labelCol"><label for="service_catalog_parent_catalog_id"><%=t(:label_slm_service_catalog_parent_catalog)%></label></td>
+              <td class="dataCol"><%=f.blank_select :parent_catalog_id ,available_parentable_service_catalog(@service_catalog.id),:id=>"service_catalog_parent_catalog_id"%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
             <tr>
               <td class="labelCol"><label for="service_catalog_service_catalog_code"><%=t(:label_slm_service_catalog_catalog_code)%></label></td>
-              <td class="dataCol"><%=f.text_field :catalog_code, :required=>true ,:irm_uppercase=>true,:id=>"service_catalog_service_catalog_code"%></td>
-              <td class="labelCol"><label for="service_catalog_service_category_code">
-                <%=t(:label_slm_service_catalog_service_category_code)%></label></td>
-              <td class="dataCol"><%=f.select :service_category_code,
-                                      options_from_collection_for_select(available_service_categories,:category_code,:wrap_name),{},
-                                             :required=>true ,:id=>"service_catalog_service_category_code"%></td>
+              <td class="dataCol"><%=@service_catalog.catalog_code%></td>
+              <td class="labelCol"><label for="service_catalog_active_start_date"><%=t(:label_slm_service_catalog_active_start_date)%></label></td>
+              <td class="dataCol"><%= f.text_field :active_start_date,:value=>show_date, :id=>"service_catalog_active_start_date"%></td>
             </tr>
 
             <tr>
               <td class="labelCol"><label for="service_catalog_name"><%=t(:label_slm_service_catalog_name)%></label></td>
               <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"service_catalog_name"%></td>
-              <td class="labelCol"><label for="service_catalog_priority_code">
-                <%=t(:label_slm_service_catalog_priority_code)%></label></td>
-              <td class="dataCol"><%=f.select :priority_code,
-                                      available_lookup_type('SLM_CATALOG_PRIORITY'),{},
-                                             :required=>true ,:id=>"service_catalog_priority_code"%></td>
+              <td class="labelCol"><label for="service_catalog_active_end_date"><%=t(:label_slm_service_catalog_active_end_date)%></label></td>
+              <td class="dataCol"><%= f.text_field :active_end_date, :id=>"service_catalog_active_end_date"%></td>
             </tr>
 
             <tr>
-              <td class="labelCol"><label for="service_catalog_active_start_date"><%=t(:label_slm_service_catalog_active_start_date)%></label></td>
-              <td class="dataCol"><%= f.text_field :active_start_date, :id=>"service_catalog_active_start_date"%></td>
+              <td class="labelCol">
+                <label for="service_catalog_service_category_code"><%=t(:label_slm_service_catalog_service_category_code)%></label>
+              </td>
+              <td class="dataCol">
+                <%=f.blank_select :service_category_id,available_service_categories,{},
+                                             :id=>"service_catalog_service_category_code"%>
+              </td>
               <td class="labelCol"><label for="service_catalog_slm_code"><%=t(:label_slm_service_catalog_slm_code)%></label></td>
-              <td class="dataCol"><%=f.blank_select :slm_code,
+              <td class="dataCol"><%=f.blank_select :slm_id,
                                       available_service_agreement,{},
                                              :id=>"service_catalog_slm_code"%></td>
             </tr>
 
-            <tr>
-              <td class="labelCol"><label for="service_catalog_active_end_date"><%=t(:label_slm_service_catalog_active_end_date)%></label></td>
-              <td class="dataCol"><%= f.text_field :active_end_date, :id=>"service_catalog_active_end_date"%></td>
-              <td class="labelCol"><label for="service_catalog_statistics_api"><%=t(:label_slm_service_catalog_statistics_api)%></label></td>
-              <td class="dataCol"><%=f.text_field :statistics_api ,:id=>"service_catalog_statistics_api"%></td>
-            </tr>
 
-            <tr>
-              <td class="labelCol"><label><%=(t :label_slm_service_catalog_service_owner)%></label></td>
-              <td class="dataCol"><%=f.select :service_owner_id,available_service_owner,{},{:required=>true}%></td>
-              <td class="labelCol"><label><%=(t :label_slm_service_catalog_external_system_code)%></label></td>
-              <td class="dataCol"><%=f.blank_select :external_system_id,options_from_collection_for_select(available_external_systems,:id,:wrap_system_name, @service_catalog.external_system_id),
-                                                    {},{:id=>"external_system_id",:required=>true}%></td>
-            </tr>
+
 
             <tr>
               <td class="labelCol"><label for="service_catalog_description"><%=t(:label_slm_service_catalog_description)%></label></td>
-              <td class="dataCol"><%= f.text_area :description, :rows => 4,:id=>"service_catalog_description"%></td>
+              <td class="dataCol" width="82%" colspan="3"><%= f.text_area :description, :rows => 4,:id=>"service_catalog_description"%></td>
+            </tr>
+
+        </tbody>
+      </table>
+    </div>
+    <div id="head_2_ep" class="pbSubheader first tertiaryPalette">
+      <h3><%= t(:label_slm_service_catalog_usable_external_system) %></h3>
+    </div>
+    <div class="pbSubsection">
+      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+            <tr>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
+          <%= render :partial => "irm/duel_select/plain",:locals => {:label=>"",:f=>f,:sources=>external_system_duel_values,:str_value_field=>:external_system_str,:str_value=>@service_catalog.get_external_system_str} %>
         </tbody>
       </table>
     </div>
