--- a/app/views/icm/incident_journals/edit_pass.html.erb
+++ b/app/views/icm/incident_journals/edit_pass.html.erb
@@ -83,7 +83,7 @@
               <td class="labelCol"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
               <td class="dataCol"><%= f.blank_select(:support_person_id,available_passable_supporter(@incident_request.support_group_id||0),{},
                                   {:id=>"incident_request_support_person_id",
-                                   :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"{incident_request_support_group_id}"),
+                                   :href=>url_for(:controller=>"icm/support_groups",:action=>"get_pass_member_options",:format=>"json",:id=>"{incident_request_support_group_id}"),
                                    :depend=>"incident_request_support_group_id"
                                    }) %></td>
 
