--- a/app/views/csi/surveys/_edit_form.html.erb
+++ b/app/views/csi/surveys/_edit_form.html.erb
@@ -71,13 +71,13 @@
         <tbody>
            <tr>
               <td class="labelCol"><label><%=(t :label_csi_survey_with_incident_request)%></label></td>
-              <td class="dataCol"><%= check_img(@survey.with_incident_request)%></td>
+              <td class="dataCol"><%= f.check_box :with_incident_request%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_csi_survey_due_dates)%></label></td>
-              <td class="dataCol"><%=f.text_field :due_dates,:size=>18%></td>
+              <td class="dataCol"><%=f.text_field :due_dates,:size=>18, :required => true%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
@@ -101,7 +101,7 @@
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_csi_survey_closed_datetime)%></label></td>
-              <td class="dataCol"><%= f.text_field :closed_datetime,:id=>"id_closed_datatime"%></td>
+              <td class="dataCol"><%= f.text_field :closed_datetime,:id=>"id_closed_datatime", :required => true%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
@@ -157,3 +157,27 @@
 
 <%= calendar_view("date1","date1","cal1")%>
 <%= calendar_view("date2","date2","cal2")%>
+<script type="text/javascript">
+GY.use(function(Y){
+    if(Y.one("#csi_survey_with_incident_request").get("checked"))
+    {
+       Y.one("#csi_survey_due_dates").removeAttribute("disabled");
+    }
+    else
+    {
+
+       Y.one("#csi_survey_due_dates").setAttribute("disabled", true);
+    }
+    Y.one("#csi_survey_with_incident_request").on("click", function(e){
+        if(Y.one("#csi_survey_with_incident_request").get("checked"))
+        {
+           Y.one("#csi_survey_due_dates").removeAttribute("disabled");
+        }
+        else
+        {
+
+           Y.one("#csi_survey_due_dates").setAttribute("disabled", true);
+        }
+    })
+})
+</script>
