--- a/app/views/icm/incident_journals/_new_form.html.erb
+++ b/app/views/icm/incident_journals/_new_form.html.erb
@@ -189,7 +189,7 @@
               <td class="label3Col"><label ><%=t(:label_icm_incident_request_support_group)%></label></td>
               <td class="data3Col"><div><%= @incident_request[:support_group_name] %></div></td>
               <td class="label3Col"><label ><%=t(:label_icm_incident_request_support_person)%></label></td>
-              <td class="data3Col"><div><%= @incident_request[:support_person_name] %></div></td>
+              <td class="data3Col"><div><%= @incident_request[:supporter_name] %></div></td>
             </tr>
         </tbody>
       </table>
