--- a/app/views/irm/bulletins/_new_form.html.erb
+++ b/app/views/irm/bulletins/_new_form.html.erb
@@ -49,7 +49,7 @@
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_bulletin_content)%></label></td>
               <td class="data2Col" colspan="4" width="100%">
-                <%= f.text_area :content ,:id=>"msgEditor",:value=>"  ",:style=>"display:none;", :required => true%>
+                <%= f.text_area :content ,:id=>"msgEditor",:value=>@bulletin.content||"   ",:style=>"display:none;", :required => true%>
               </td>
             </tr>
             <tr>
