--- a/app/views/icm/incident_requests/_customer_list.html.erb
+++ b/app/views/icm/incident_requests/_customer_list.html.erb
@@ -4,7 +4,7 @@
             <%= link_to(t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>"{id}"}) %>
           </div>
           <div id="title" style="display:none">
-            if('{need_customer_reply}' == 'Y'){
+            if('{reply_flag}' == 'Y'){
                '<%= icon_link("btn_reply", t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>"{id}"}) %>({incident_status_name})<%= link_to( "{title}",{:controller=>"icm/incident_journals",:action=>"new",:request_id=>"{id}"}) %>'
             }
             else{
@@ -17,7 +17,7 @@
                        { :key => "request_number", :label => t(:label_icm_incident_request_request_number_shot),:searchable=>true,:width=>"20px"},
                        { :key => "title",:formatter=>"Y.irm.stemplate",:label => t(:label_icm_incident_request_title),:searchable=>true },
                        { :key => "incident_status_name",:hidden=>true },
-                       { :key => "need_customer_reply",:hidden=>true },
+                       { :key => "reply_flag",:hidden=>true },
                        { :key => "last_response_date", :label => t(:label_icm_incident_request_last_date),:width=>"180px" },
                        { :key => "organization_name", :label => t(:label_icm_incident_request_organization),:width=>"120px"},
                        { :key => "external_system_name", :label => t(:label_irm_external_system),:width=>"180px" }
