修正页面表格搜索

--- a/app/views/irm/list_of_values/index.html.erb
+++ b/app/views/irm/list_of_values/index.html.erb
@@ -29,11 +29,11 @@
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
                                               { :key => "lov_code", :label => t(:label_irm_list_of_value_lov_code),:searchable=>true },
                                               { :key => "name", :label => t(:label_irm_list_of_value_name),:searchable=>true },
-                                              { :key => "bo_name", :label => t(:label_irm_list_of_value_bo_code),:searchable=>true },
-                                              { :key => "id_column", :label => t(:label_irm_list_of_value_id_column),:searchable=>true },
-                                              { :key => "value_column", :label => t(:label_irm_list_of_value_value_column),:searchable=>true },
-                                              { :key => "value_title", :label => t(:label_irm_list_of_value_value_title),:searchable=>true },
-                                              { :key => "listable_flag",:formatter=>"Y.irm.template", :label => t(:label_irm_list_of_value_listable_flag),:searchable=>true }
+                                              { :key => "bo_name", :label => t(:label_irm_list_of_value_bo_code) },
+                                              { :key => "id_column", :label => t(:label_irm_list_of_value_id_column)},
+                                              { :key => "value_column", :label => t(:label_irm_list_of_value_value_column)},
+                                              { :key => "value_title", :label => t(:label_irm_list_of_value_value_title)},
+                                              { :key => "listable_flag",:formatter=>"Y.irm.template", :label => t(:label_irm_list_of_value_listable_flag)}
                                               ],{:paginator_box=>"list_of_valuesPaginatorBox",:search_box=>"list_of_valuesSearchBox"})%>
         <div id="list_of_valuesPaginatorBox"></div>
       </div>
