--- a/app/views/irm/people/index.html.erb
+++ b/app/views/irm/people/index.html.erb
@@ -30,7 +30,7 @@
                    {:key=>"email_address",:label=>t(:label_irm_person_email_address),:searchable=>true},
                    {:key=>"bussiness_phone",:label=>t(:label_irm_person_bussiness_phone),:searchable=>true},
                    {:key=>"organization_name",:label=>t(:label_irm_person_organization),:searchable=>true},
-                   {:key=>"region_name",:label=>t(:label_irm_person_region_code),:searchable=>true}],
+                   {:key=>"profile_name",:label=>t(:label_irm_person_profile),:searchable=>true}],
                    {:search_box=>"permissionsSearchBox",:paginator_box=>"peoplePaginatorBox"})%>
         <div id="peoplePaginatorBox"></div>
       </div>
