--- a/app/views/irm/report_types/index.html.erb
+++ b/app/views/irm/report_types/index.html.erb
@@ -26,9 +26,9 @@
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
                        { :key => "name", :label => t(:label_irm_report_type_name),:searchable=>true },
                        { :key => "description", :label => t(:label_irm_report_type_description),:searchable=>true },
-                       { :key => "category_name", :label => t(:label_irm_report_type_category),:searchable=>true },
-                       { :key => "business_object_name", :label => t(:label_irm_report_type_business_object),:searchable=>true },
-                       { :key => "created_at", :label => t(:created_at),:searchable=>true }
+                       { :key => "category_name", :label => t(:label_irm_report_type_category)},
+                       { :key => "business_object_name", :label => t(:label_irm_report_type_business_object) },
+                       { :key => "created_at", :label => t(:created_at) }
                       ],{:paginator_box=>"report_typesPaginatorBox",:search_box=>"report_typesSearchBox"})%>
         <div id="report_typesPaginatorBox"></div>
       </div>
