--- a/app/views/irm/tabs/index.html.erb
+++ b/app/views/irm/tabs/index.html.erb
@@ -27,8 +27,8 @@
                        { :key => "code", :label => t(:label_irm_tab_code),:searchable=>true },
                        { :key => "name", :label => t(:label_irm_tab_name),:searchable=>true },
                        { :key => "description", :label => t(:label_irm_tab_description),:searchable=>true },
-                       { :key => "function_group_name", :label => t(:label_irm_tab_function_group),:searchable=>true },
-                       { :key => "business_object_name", :label => t(:label_irm_tab_business_object),:searchable=>true }
+                       { :key => "function_group_name", :label => t(:label_irm_tab_function_group) },
+                       { :key => "business_object_name", :label => t(:label_irm_tab_business_object) }
 
                       ],{:paginator_box=>"tabsPaginatorBox",:search_box=>"tabsSearchBox"})%>
         <div id="tabsPaginatorBox"></div>
