--- a/app/views/irm/wf_field_updates/index.html.erb
+++ b/app/views/irm/wf_field_updates/index.html.erb
@@ -26,8 +26,8 @@
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
                        { :key => "name", :label => t(:label_irm_wf_field_update_name),:searchable=>true },
                        { :key => "field_update_code", :label => t(:label_irm_wf_field_update_field_update_code),:searchable=>true },
-                       { :key => "bo_name", :label => t(:label_irm_wf_field_update_bo_code),:searchable=>true },
-                       { :key => "object_attribute_name", :label => t(:label_irm_wf_field_update_object_attribute),:searchable=>true },
+                       { :key => "bo_name", :label => t(:label_irm_wf_field_update_bo_code) },
+                       { :key => "object_attribute_name", :label => t(:label_irm_wf_field_update_object_attribute)},
                        { :key => "value_type_name", :label => t(:label_irm_wf_field_update_value_type)},
                       ],{:paginator_box=>"wf_field_updatesPaginatorBox",:search_box=>"wf_field_updatesSearchBox"})%>
         <div id="wf_field_updatesPaginatorBox"></div>
