--- a/app/views/irm/operation_units/show.html.erb
+++ b/app/views/irm/operation_units/show.html.erb
@@ -31,6 +31,12 @@
               <td class="dataCol empty"><div>&nbsp;</div></td>
             </tr>
             <tr>
+              <td class="labelCol"><label ><%=t(:label_irm_operation_unit_license)%></label></td>
+              <td class="dataCol"><div><%= @operation_unit[:license_name] %></div></td>
+              <td class="labelCol empty"><div>&nbsp;</div></td>
+              <td class="dataCol empty"><div>&nbsp;</div></td>
+            </tr>
+            <tr>
               <td class="labelCol"><label ><%=t(:label_irm_operation_unit_default_language_code)%></label></td>
               <td class="dataCol"><div><%= @operation_unit[:default_language_name] %></div></td>
               <td class="labelCol empty"><div>&nbsp;</div></td>
