--- a/app/views/irm/wf_rules/index.html.erb
+++ b/app/views/irm/wf_rules/index.html.erb
@@ -24,10 +24,10 @@
         </div>
         <%= datatable("wf_rules",url_for(:action=>"get_data",:format=>"json"),
                       [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"90px"},
-                       { :key => "bo_name", :label => t(:label_irm_wf_rule_bo_code),:searchable=>true },
+                       { :key => "bo_name", :label => t(:label_irm_wf_rule_bo_code) },
                        { :key => "rule_code", :label => t(:label_irm_wf_rule_rule_code),:searchable=>true },
                        { :key => "name", :label => t(:label_irm_wf_rule_name),:searchable=>true },
-                       { :key => "evaluate_criteria_rule_name", :label => t(:label_irm_wf_rule_evaluate_criteria_rule),:searchable=>true }
+                       { :key => "evaluate_criteria_rule_name", :label => t(:label_irm_wf_rule_evaluate_criteria_rule) }
                       ],{:paginator_box=>"wf_rulesPaginatorBox",:search_box=>"wf_rulesSearchBox"})%>
         <div id="wf_rulesPaginatorBox"></div>
       </div>
