--- a/app/views/skm/entry_template_elements/_data_grid.html.erb
+++ b/app/views/skm/entry_template_elements/_data_grid.html.erb
@@ -31,7 +31,8 @@
                        {:key=>"description",:label=>t(:description)},
                        {:key=>"default_rows",:label=>t(:label_skm_entry_template_element_rows), :width => "80px"},
                        {:key=>"status_code",:label=>t(:active),:formatter=>"Y.irm.template", :width => "80px"}
-                       ], {:search_box => "elementsSearchBox"}) %>
+                       ], {:search_box => "elementsSearchBox",:paginator_box=>"elementsPaginatorBox"}) %>
+        <div id="elementsPaginatorBox"></div>
       </div>
     </div>
 </div>
